Load agent at startup for tests
Otherwise, referencing agent classes from test code could trigger
NoClassDefFoundError (depending on the order in which the tests run).

Also, clean up some build.gradle code.